<resources>
    <string name="app_name">Journal Bot</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="no_image">No Image</string>
    <string name="first_fragment">
        Hi! I\'m Bot, your new well-being robot!
        \n\nEach day you can complete a daily check-in, and write in your journal.
        \n\nIf you\'re having any problems with the app, check out the profile page for help.
    </string>
    <string name="second_fragment">Let\'s get to know each other! Choose up to 3 items from this list that you\'d like to work on together. (optional)</string>
    <string name="third_fragment">What should I call you?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="notification_header">Notifications</string>
    <string name="focus_header">Focus Topics</string>

    <!-- Notification Preferences -->
    <string name="reminder_title">Reminders Enabled</string>
    <string name="notification_title">Reminder Frequency</string>
    <string name="notification_time">Reminder Time</string>

    <!-- Notification Values -->
    <string name="notification_header_value">Daily Check-in Reminder</string>
    <string name="notification_content">
        Looks like it\'s time for your daily check-in! Tap here to open the app and get started.
    </string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- Help Page Strings -->
    <string name="help_title_description">Overview</string>
    <string name="help_text_description">This app is a journal and a mood tracker. The main interface
        is the home screen, where you can chat with a bot to record mood data and journal entries.
        \n\nThe next page is the Dashboard. This page allows you to see your activity on the app,
        and keep track of your progress over the past few days.
        \n\nThe last page to mention is the Profile page. This page shows your name and selected
        focus topics, and links to the help, preferences, and feedback pages. The preferences page
        allows you to change your notification settings, and feedback page provides a space to report
        bugs or give feedback about your experience.
        \n\nPlease note - This app is still in an early development stage, meaning there may be less
        functionality in this version than there will be in future. You may also notice bugs or parts
        of the app that aren\'t working as they should. If you are able to report these using the
        \'Send Feedback\' button found on the profile page, that\'s greatly appreciated. Any and all
        feedback, feature requests, or bug reports are welcome to help improve the app.
        \nThanks for your support!</string>
    <string name="help_title_talking">Talking to Bot</string>
    <string name="help_text_talking">When you first open the application, Bot will greet you and ask
        if you\'d like to complete a mood check-in. To start the mood check-in, you can reply saying
        yes, or say no if you\'d like to leave it for now.
        \n\nOnce you have started the mood check-in, you can skip any question that you don\'t want
        to answer by saying anything like "skip" or "I can\'t answer".
        \n\nIf you have completed your check in for one day, starting another check-in on the same
        day will overwrite your saved data for that date. Starting another check-in on the next day
        will be saved separately as a new check-in</string>
    <string name="help_title_notifications">Reminders</string>
    <string name="help_text_notifications">When you first start using the application, by default
        you will receive daily notifications to remind you to complete a check-in. You can
        disable or enable this feature from the preferences page.
        \n\nOn the preferences page you will also find settings that will allow you to change how
        often you are reminded, and what time of day you are reminded.</string>
</resources>