<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notification_header">

        <SwitchPreferenceCompat
            app:key="reminders-enabled"
            app:title="@string/reminder_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="daily"
            app:entries="@array/frequency_entries"
            app:entryValues="@array/frequency_values"
            app:key="reminder-frequency"
            app:title="@string/notification_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="20"
            android:entries="@array/time_entries"
            android:entryValues="@array/time_values"
            android:key="reminder-time"
            android:title="@string/notification_time"
            app:useSimpleSummaryProvider="true"/>


    </PreferenceCategory>

<!--    <PreferenceCategory app:title="@string/focus_header">-->


<!--        <CheckBoxPreference-->
<!--            android:defaultValue="false"-->
<!--            android:key="anxiety_selected"-->
<!--            android:title="Anxiety" />-->
<!--        <CheckBoxPreference-->
<!--            android:defaultValue="false"-->
<!--            android:key="motivation_selected"-->
<!--            android:title="Motivation" />-->
<!--        <CheckBoxPreference-->
<!--            android:defaultValue="false"-->
<!--            android:key="depression_selected"-->
<!--            android:title="Depression" />-->
<!--        <CheckBoxPreference-->
<!--            android:defaultValue="false"-->
<!--            android:key="energy_selected"-->
<!--            android:title="Energy" />-->
<!--    </PreferenceCategory>-->

</PreferenceScreen>